changing to virtual threads scenario8